# HA-Invader-Tracker

./: .gitignore  BUGFIX_CITY_REMOVAL.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL.md  LICENSE  QUICK_REFERENCE.md  README.md  hacs.json  pyproject.toml
.github/workflow/: release.yml
.github/workflows/: ci.yml  hacs.yml
custom_components/invader_tracker/: __init__.py  binary_sensor.py  binary_sensor_world.py  config_flow.py  const.py  coordinator.py  exceptions.py  manifest.json  models.py  processor.py  sensor.py  sensor_profile.py  sensor_world.py  store.py  strings.json
custom_components/invader_tracker/api/: __init__.py  awazleon.py  flash_invader.py  invader_spotter.py
custom_components/invader_tracker/translations/: en.json  fr.json
docs/: architecture.md
tests/: __init__.py  conftest.py  test_awazleon.py  test_coordinator.py  test_device_removal.py  test_flash_invader.py  test_invader_spotter.py  test_models.py  test_processor.py  test_sensor.py
